src/objects/Findings__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Wide_Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit ID</label>
        <referenceTo>Agency_wide_Audit__c</referenceTo>
        <relationshipLabel>Findings</relationshipLabel>
        <relationshipName>Findings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Concurrence__c</fullName>
        <label>CNCS Concurrence</label>
        <picklist>
            <picklistValues>
                <fullName>CNCS Concurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNCS Partially Concurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNCS Does Not Concur</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corrective Action Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Taken__c</fullName>
        <inlineHelpText>Describe in detail corrective actions taken to address finding and auditor recommendations.</inlineHelpText>
        <label>Corrective Action Taken</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Finding_Category__c</fullName>
        <label>Finding Category</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal History Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Timekeeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member/Volunteer Timekeeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unallowable Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect/Administrative Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member/Volunteer Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member/Volunteer Eligibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Finding_Number__c</fullName>
        <label>Finding Number</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finding_Summary__c</fullName>
        <label>Finding Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OIG_Auditor_Recommendation__c</fullName>
        <label>OIG Auditor Recommendation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other Findings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_to_NSCHC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this finding/recommendation related to NSCHC?</inlineHelpText>
        <label>Related to NSCHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Audit_Number__c</fullName>
        <label>Unique Audit Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Findings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Finding_Number__c</columns>
        <columns>Agency_Wide_Audit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Finding ID-{000}</displayFormat>
        <label>Findings ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Findings</pluralLabel>
    <recordTypes>
        <fullName>Findings</fullName>
        <active>true</active>
        <label>Findings</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Corrective_Action_Taken_must_be_entered</fullName>
        <active>false</active>
        <description>Corrective Action Taken must be entered if a finding number is entered</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Finding_Number__c))
, LEN(Corrective_Action_Taken__c) =0)</errorConditionFormula>
        <errorDisplayField>Corrective_Action_Taken__c</errorDisplayField>
        <errorMessage>Corrective Action Taken must be entered if a finding number is entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FindingNumberRequired</fullName>
        <active>true</active>
        <description>A finding number must be entered if a Finding Category is selected.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Finding_Category__c)),ISBLANK( Finding_Number__c ))</errorConditionFormula>
        <errorDisplayField>Finding_Number__c</errorDisplayField>
        <errorMessage>A finding number must be entered if a Finding Category is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_Validation_on_Finding_Number</fullName>
        <active>true</active>
        <description>Must enter only two numbers between {0-9}</description>
        <errorConditionFormula>NOT( 
OR( 
LEN (Finding_Number__c) = 0, 
REGEX(Finding_Number__c, &quot;[0-9]{2}&quot;) 
))</errorConditionFormula>
        <errorDisplayField>Finding_Number__c</errorDisplayField>
        <errorMessage>Must enter only two numbers between {0-9}</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OtherFindingsRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    INCLUDES (Finding_Category__c , &quot;Other&quot;),
    ISBLANK(Other__c ) 
)</errorConditionFormula>
        <errorDisplayField>Other__c</errorDisplayField>
        <errorMessage>If “Other” is selected as a finding, a response must be entered in the “Other Findings” .</errorMessage>
    </validationRules>
</CustomObject>